5.0.0 -> 5.1a1:
    - rse: fix Autoconf procedure by running python(1) based checks only under --with-python
    - rse: provide RPM Lua function rpm.realpath(<path>) to complement RPM macro %{realpath:<path>}
    - rse: unconditionally provide RPM Lua functions posix.{setenv,unsetenv}
    - jbj: proof-of-concept rpmbuild --lsb implementation. ptooey!
    - jbj: unbreak rpm-python, preserve existing symbol in released versions.
    - jbj: fix several typos noticed by the translation project.
    - jbj: add -noautoreq/--noautoprov options to rpmbuild.
    - proyvind: Rename rpmcliImportPubkey() -> rpmtsImportPubkey() (from and for a hint of rpm.org API compatibility;)
    - proyvind: expose more functions in rpmps API (as rpm.org, initially based on us ;p)
    - jbj: fix: plug memory leak with digest algos array.
    - jbj: fix: --relocate no longer needs to copy dirIndexes data.
    - proyvind: make perl install directory overriddable from configure as an argument (--with-perl=vendor/site)
    - proyvind: fix install location of man pages for perl bindings
    - proyvind: fix install location of pkgconfig & python bindings (lib64 fix)
    - jbj: don't follow symlinks using chown/chgrp from --setugids pipe.
    - jbj: sync *.po with the translation project (sr@latin.po needs work).
    - rse: add a RPM Lua function rpm.sleep() as a trivial frontend to sleep(3)
    - rse: fix PGP clearsign signature verification by correctly skipping RFC2440 "dash-escapes"
    - rse: fix line-continuation handling in macro definition parsing
    - rse: implement RPM Lua function util.textwrap() for auto-wrapping junks of larger text messages
    - rse: upgrade RPM Lua functions util.rmatch(), util.rsubst() and util.rsplit() to new lrexlib 2.2
    - rse: upgrade the RPM Lua extension lrexlib from ancient version 1.1x to latest version 2.2
    - jbj: permit opt-in network access using %_rpmgio macro.
    - jbj: fix: deny rpmioSlurp network access (like all other Fopen call's).