@@ -902,6 +902,7 @@
         OPTION="$OPTION --with-path-cfg=\"$prefix/etc/rpm\""
         OPTION="$OPTION --with-path-rpmpopt=\"$prefix/lib/rpm/rpmpopt:$prefix/etc/rpm/rpmpopt:~/.rpmpopt\""
         OPTION="$OPTION --with-path-macros=\"$prefix/lib/rpm/macros:$prefix/etc/rpm/macros:~/.rpmmacros\""
+        OPTION="$OPTION --with-path-rpmlua=\"$prefix/lib/rpm/rpmlua:$prefix/etc/rpm/rpmlua:~/.rpmlua\""
         OPTION="$OPTION --with-path-lib=\"$prefix/lib/rpm\""
         OPTION="$OPTION --with-path-locale=\"$prefix/share/rpm/locale\""
         OPTION="$OPTION --with-path-database=\"$prefix/var/rpm/db\""
